@@ -36,9 +36,6 @@ from django import VERSION as DJANGO_VERSION
 from django.db.backends.base.introspection import (
     BaseDatabaseIntrospection, FieldInfo as BaseFieldInfo, TableInfo,
 )
-from django.db.backends.mysql.introspection import (
-    DatabaseIntrospection as MySQLDatabaseIntrospection,
-)
 from django.db.models import Index
 from django.utils.datastructures import OrderedSet
 
@@ -60,7 +57,57 @@ else:
     )
 
 
-class DatabaseIntrospection(MySQLDatabaseIntrospection):
+class DatabaseIntrospection(BaseDatabaseIntrospection):
+
+    data_types_reverse = {
+        FieldType.BLOB: 'TextField',
+        FieldType.DECIMAL: 'DecimalField',
+        FieldType.NEWDECIMAL: 'DecimalField',
+        FieldType.DATE: 'DateField',
+        FieldType.DATETIME: 'DateTimeField',
+        FieldType.DOUBLE: 'FloatField',
+        FieldType.FLOAT: 'FloatField',
+        FieldType.INT24: 'IntegerField',
+        FieldType.LONG: 'IntegerField',
+        FieldType.LONGLONG: 'BigIntegerField',
+        FieldType.SHORT: 'SmallIntegerField',
+        FieldType.STRING: 'CharField',
+        FieldType.TIME: 'TimeField',
+        FieldType.TIMESTAMP: 'DateTimeField',
+        FieldType.TINY: 'IntegerField',
+        FieldType.TINY_BLOB: 'TextField',
+        FieldType.MEDIUM_BLOB: 'TextField',
+        FieldType.LONG_BLOB: 'TextField',
+        FieldType.VAR_STRING: 'CharField',
+    }
+
+    def get_field_type(self, data_type, description):
+        field_type = super().get_field_type(data_type, description)
+        if 'auto_increment' in description.extra:
+            if field_type == 'IntegerField':
+                return 'AutoField'
+            elif field_type == 'BigIntegerField':
+                return 'BigAutoField'
+            elif field_type == 'SmallIntegerField':
+                return 'SmallAutoField'
+        if description.is_unsigned:
+            if field_type == 'BigIntegerField':
+                return 'PositiveBigIntegerField'
+            elif field_type == 'IntegerField':
+                return 'PositiveIntegerField'
+            elif field_type == 'SmallIntegerField':
+                return 'PositiveSmallIntegerField'
+        # JSON data type is an alias for LONGTEXT in MariaDB, use check
+        # constraints clauses to introspect JSONField.
+        if description.has_json_constraint:
+            return 'JSONField'
+        return field_type
+
+    def get_table_list(self, cursor):
+        """Return a list of table and view names in the current database."""
+        cursor.execute("SHOW FULL TABLES")
+        return [TableInfo(row[0], {'BASE TABLE': 't', 'VIEW': 'v'}.get(row[1]))
+                for row in cursor.fetchall()]
 
     def get_table_description(self, cursor, table_name):
         """
@@ -180,6 +227,54 @@ class DatabaseIntrospection(MySQLDatabaseIntrospection):
             if column[1]['primary_key']:
                 return column[0]
         return None
+
+    def get_sequences(self, cursor, table_name, table_fields=()):
+        for field_info in self.get_table_description(cursor, table_name):
+            if 'auto_increment' in field_info.extra:
+                # MySQL allows only one auto-increment column per table.
+                return [{'table': table_name, 'column': field_info.name}]
+        return []
+
+    def get_relations(self, cursor, table_name):
+        """
+        Return a dictionary of {field_name: (field_name_other_table, other_table)}
+        representing all relationships to the given table.
+        """
+        constraints = self.get_key_columns(cursor, table_name)
+        relations = {}
+        for my_fieldname, other_table, other_field in constraints:
+            relations[my_fieldname] = (other_field, other_table)
+        return relations
+
+    def get_key_columns(self, cursor, table_name):
+        """
+        Return a list of (column_name, referenced_table_name, referenced_column_name)
+        for all key columns in the given table.
+        """
+        key_columns = []
+        cursor.execute("""
+            SELECT column_name, referenced_table_name, referenced_column_name
+            FROM information_schema.key_column_usage
+            WHERE table_name = %s
+                AND table_schema = DATABASE()
+                AND referenced_table_name IS NOT NULL
+                AND referenced_column_name IS NOT NULL""", [table_name])
+        key_columns.extend(cursor.fetchall())
+        return key_columns
+
+    def get_storage_engine(self, cursor, table_name):
+        """
+        Retrieve the storage engine for a given table. Return the default
+        storage engine if the table doesn't exist.
+        """
+        cursor.execute(
+            "SELECT engine "
+            "FROM information_schema.tables "
+            "WHERE table_name = %s", [table_name])
+        result = cursor.fetchone()
+        if not result:
+            return self.connection.features._mysql_storage_engine
+        return result[0]
 
     def get_constraints(self, cursor, table_name):
         """
